k8s/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: msa-peer-auth
  namespace: msa
spec:
  mtls:
    mode: STRICT
